--- a/client/src/pages/OrderDetail.css
+++ b/client/src/pages/OrderDetail.css
@@ -224,7 +224,8 @@
 }
 
 .home-btn,
-.cart-btn {
+.cart-btn,
+.orders-btn {
   padding: 1rem 2rem;
   background-color: #1565c0;
   color: #ffffff;
@@ -238,7 +239,8 @@
 }
 
 .home-btn:hover,
-.cart-btn:hover {
+.cart-btn:hover,
+.orders-btn:hover {
   background-color: #0d47a1;
 }
 
